97 lesson, I use formik for update profile

--- a/src/components/Profile/ProfileInfo/ProfileData/ProfileData.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileData/ProfileData.module.css
@@ -1,8 +1,18 @@
 .info {
-    margin-left:  20px;
+
     color: white;
 }
 .info i, b {
     margin-left:  20px;
+
     color: #ddd8d8;
 }
+.info b {
+    color: white;
+}
+
+.error {
+    color: #ed9292;
+    padding: 3px;
+}
+
