--- a/src/assets/common/common.module.css
+++ b/src/assets/common/common.module.css
@@ -6,3 +6,13 @@
     text-align: center;
     color: white;
 }
+
+.checkBox {
+    width: 155px;
+    height: 20px;
+    background: #d9d9d9;
+    border-radius: 5px;
+    margin: 4px 4px;
+    color: #494949;
+    padding: 5px;
+}
